<resources>
    <string name="app_name">Crypto</string>
    <string name="example_price">999999 $</string>
    <string name="example_symbol">btc</string>
    <string name="example_price_change">+999.9 %</string>
    <string name="example_name">Bitcoin</string>
    <string name="example_market_cap">$ 999.99 B</string>
    <string name="example_max_price">80000 $</string>
    <string name="example_min_price">5000 $</string>
    <string name="unknown">\?????</string>
    <string name="mainScreen_label">Cryptocurrencies</string>
    <string name="sorted_by_price">Sorted by price</string>
    <string name="sorted_by_market_cap">Sorted by market capitalization</string>
    <string name="sorted_by_volatility">Sorted by volatility</string>
    <string name="error_massage">An error has occurred</string>
    <string name="dialog_sorted_by_price">Price</string>
    <string name="dialog_sorted_by_cap">Market capitalisation</string>
    <string name="dialog_sorted_by_vol">Volatility</string>
    <string name="sort_dialog_title">Sort by:</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="one_day_radio_button">24H</string>
    <string name="one_week_radio_button">1W</string>
    <string name="one_month_radio_button">1M</string>
    <string name="one_year_radio_button">1Y</string>
    <string name="all_time_radio_button">ALL</string>
    <string name="market_cap_label_details_screen">Market cap:</string>
    <string name="no_data">Not enough data to display chart</string>
    <string name="bottom_menu_item_main_text">Main</string>
    <string name="settings_label_text">Settings</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="text_helper">Required*</string>
    <string name="validation_first_and_last_name">The field must not contain more than 20 characters.</string>
    <string name="no_first_name">Data cannot be saved. Input first name.</string>
    <string name="no_last_name">Data cannot be saved. Input last name.</string>
    <string name="no_first_and_last_name">Data cannot be saved. Input first and last name.</string>
    <string name="first_name_too_long">Data cannot be saved. First name is too long.</string>
    <string name="first_last_name_are_too_long">Data cannot be saved. First and last names are too long.</string>
    <string name="last_name_too_long">Data cannot be saved. Last name is too long.</string>
    <string name="success_input">Data saved.</string>
    <string name="download_photo">Download photo</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="no_internet">No connection to the internet</string>
    <string name="try_again">Try Again</string>
    <string name="still_no_connection">Internet connection still not available.</string>
    <string name="date_picker_title">SELECT DATE OF BIRTH</string>
    <string name="permission_denied">"You just denied the permission for camera. Allow it in the settings."</string>

</resources>