<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.details_screen.DetailsScreenFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.Crypto.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_back_to_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="4dp"
            android:src="@drawable/ic_back_button" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_coin_symbol"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_example_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_coin_name_toolbar"
            style="@style/Widget.Crypto.TextView.CryptoToolBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/example_name" />

    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminate="true"
                app:layout_constraintBottom_toTopOf="@+id/text_min_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_max_price" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/price_charts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/price_charts" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_current_price"
                style="@style/Widget.Crypto.TextView.DetailsScreenPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/example_price"
                android:transitionName="price_details_screen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_price_change"
                style="@style/Widget.Crypto.TextView.DetailsScreenPriceChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/example_price_change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_current_price" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_max_price"
                style="@style/Widget.Crypto.TextView.DetailsScreenMinAndMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/example_max_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_price_change" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/price_charts"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_max_price" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_min_price"
                style="@style/Widget.Crypto.TextView.DetailsScreenMinAndMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/example_min_price"
                app:layout_constraintBottom_toTopOf="@id/radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_charts" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_min_price">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_one_day"
                    style="@style/Widget.Crypto.RadioButton"
                    android:checked="true"
                    android:text="@string/one_day_radio_button" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_one_week"
                    style="@style/Widget.Crypto.RadioButton"
                    android:text="@string/one_week_radio_button" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_one_month"
                    style="@style/Widget.Crypto.RadioButton"
                    android:text="@string/one_month_radio_button" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_one_year"
                    style="@style/Widget.Crypto.RadioButton"
                    android:text="@string/one_year_radio_button" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_button_all_time"
                    style="@style/Widget.Crypto.RadioButton"
                    android:text="@string/all_time_radio_button" />
            </RadioGroup>

            <View
                android:id="@+id/separation_line"
                style="@style/SeparationLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_market_cap"
                style="@style/Widget.Crypto.TextView.DetailsScreenMarketCapLabel"
                android:text="@string/market_cap_label_details_screen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separation_line" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_market_cap_value"
                style="@style/Widget.Crypto.TextView.DetailsScreenMarketCapValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_market_cap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separation_line" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>