<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_coin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_coin_price"
        style="@style/Widget.MaterialComponents.TextView.CoinPrice"
        android:layout_width="112dp"
        android:singleLine="true"
        android:transitionName="price_main_screen"
        android:gravity="end"
        android:ellipsize="middle"
        android:layout_height="wrap_content"
        android:text="@string/example_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_coin_name"
        style="@style/Widget.MaterialComponents.TextView.ItemCoinName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/example_name"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_coin"
        app:layout_constraintTop_toBottomOf="@+id/text_coin_symbol" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_coin_symbol"
        style="@style/Widget.MaterialComponents.TextView.CoinSymbol"
        android:layout_height="wrap_content"
        android:layout_width="100dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/example_symbol"
        app:layout_constraintBottom_toTopOf="@+id/text_coin_name"
        app:layout_constraintStart_toStartOf="@+id/text_coin_name"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>